# save-your-links-backend

./: .gitignore  Dockerfile_celery  Dockerfile_django  README.md  pyproject.toml
myapp/: authentications.py  models.py  paginations.py  permissions.py  signals.py  tasks.py  tests.py  urls.py  utils.py
myapp/migrations/: 0001_initial.py  0002_linkcollectionlike.py  0003_linkcollectionviewmodel.py  0004_useravatar.py  0005_linkcollectionthumbnail.py  0006_alter_linkcollection_share_uuid_and_more.py  0007_linkcollection_likes_count_and_more.py
myapp/serializers/: __init__.py  bookmark.py  collection.py  link.py  user.py
myapp/views/: __init__.py  auth.py  collection.py  link.py  user.py
proj/: celery.py  settings.py  urls.py
